internal/controller/testdata/captenant/provider-tenant-vs-v1.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    sme.sap.com/resource-hash: 095aa539f02dffd3044dbd6d7d00f1a6d564791fecf6d5477dd9a7b320098d68
    sme.sap.com/owner-identifier: default.test-cap-01-provider
  labels:
    sme.sap.com/owner-generation: "2"
    sme.sap.com/owner-identifier-hash: db1f1fd7eaeb0e6407c741b7e4b2540044bcc4ec
    sme.sap.com/tenant-type: provider    
  name: test-cap-01-provider
  namespace: default
  ownerReferences:
    - apiVersion: sme.sap.com/v1alpha2
      blockOwnerDeletion: true
      controller: true
      kind: CAPTenant
      name: test-cap-01-provider
spec:
  gateways:
    - test-cap-01-primary-gen
    - default/test-cap-01-secondary-gen
  hosts:
    - my-provider.app-domain.test.local
    - my-provider.foo.bar.local
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: test-cap-01-cav-v1-app-router-svc.default.svc.cluster.local
            port:
              number: 5000
          weight: 100
